# cryptotithe-rs

./: Cargo.toml
src/: add_to_holdings.rs  calculate_gain_per_holdings.rs  calculate_gain_per_trade.rs  calculate_gains.rs  holding.rs  income.rs  lib.rs  method.rs  mocks.rs  process_trade.rs  trade.rs
src/holding/: add_to_currency_holdings.rs  mod.rs  process_trade.rs
src/holding_selection/: mod.rs
src/holding_selection/get_currency_holding/: cost_first_out.rs  highest_tax_first_out.rs  lowest_tax_first_out.rs  mod.rs  tax_first_out.rs
src/trade/: mod.rs  trade.rs  trade_with_cost_basis.rs  trade_with_fiat_rate.rs
